--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
   },
   "scripts": {
     "start": "bun run src/index.ts",
-    "dev": "bun run src/index.ts"
+    "dev": "bun run src/index.ts",
+    "postinstall": "bunx prisma generate"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.7.0",
+    "elysia": "^0.7.30",
+    "express": "^4.18.2",
+    "prisma": "^5.7.0"
   }
 }
