--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "5.7.1",
     "elysia": "^0.7.30",
     "express": "^4.18.2",
-    "prisma": "^5.7.0"
+    "prisma": "5.7.1"
   }
 }
