--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5533/postgres"
+DATABASE_URL="postgresql://postgres:postgres@db:5432/bun_todos"
 DATABASE_URL_DEV="postgresql://postgres:postgres@localhost:5534/postgres"
