--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "postgresql_docker_prisma",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "bun-types": "latest"
-  },
+  "name": "prisma-docker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.ts",
   "scripts": {
-    "start": "bun run src/index.ts",
-    "dev": "bun run src/index.ts",
-    "postinstall": "bunx prisma generate"
+    "dev": "nodemon --config nodemon.json src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "nodemon": "^3.0.2",
+    "prisma": "^5.7.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@prisma/client": "5.7.1",
-    "elysia": "^0.7.30",
-    "express": "^4.18.2",
-    "prisma": "5.7.1"
+    "@prisma/client": "^5.7.1",
+    "express": "^4.18.2"
   }
 }
